# force_push

./: CMakeLists.txt  LICENSE  Pipfile  README.md  linear.py  mm.py  mpc.py  nonlinear.py  package.xml  pyproject.toml  requirements.txt  setup.py
config/: barrel_offset_calibration.yaml  contact_point_calibration.yaml  contact_point_calibration_2024-04-09_11-30-00.yaml  contact_point_calibration_2024-04-10_12-08-08.yaml  contact_point_calibration_2024-04-10_18-12-50.yaml  contact_point_calibration_2024-04-15_10-55-22.yaml  contact_point_calibration_2024-04-15_17-02-38.yaml  contact_point_calibration_2024-04-16_13-00-54.yaml  contact_point_calibration_2024-04-26_11-26-23.yaml  contact_point_calibration_original.yaml  force_orn_5lb_calibration_2023-10-30_15-00-10.yaml  force_orn_5lb_calibration_2023-10-30_15-17-52.yaml  force_orn_calibration.yaml  force_orn_calibration_2023-10-30_13-51-38.yaml  home.yaml
matlab/: continous.slx  continous.slxc  params.m
mm/: fc.py  mm.py  notes.md  obstacle.py  opt.py  plotter.py  trajectory.py
mm2d/: controller.py  decoupled.py  mm.py  model.py  notes.md  obstacle.py  plotter.py  trajectory.py  util.py
mmpush/: __init__.py  motion.py  slider.py
scripts/: analytic_sim.py  build_Bbar_matrix.py  chomp.py  clik.py  construct_C.py  discontinuous_weighted_pseudoinverse.py  embrace.py  equations_of_motion.py  force_estimation.py  jacobian_svd.py  obj_vs_constr.py  optimize_manipulability.py  pi_with_discharge.py  planar_force.py  planar_pushing.py  push_square.py  pymunk_planar_friction.py  pymunk_sim_demo.py  simple_planning.py  spiral.py  symbolic_jacobian.py  test_autograd.py  test_dynamics.py  test_jax.py  test_pygame.py  test_pymunk.py
sims/: decoupled.py  force_control.py
test/: test_control.py  test_path.py  test_pusher_slider_motion.py  test_util.py
toys/: fc.py  linear_mpc.py  nonlinear.py  nonlinear_mpc.py
(+136 files in other folders)
