<?xml version="1.0"?>
<package format="2">
  <name>force_push</name>
  <version>0.1.0</version>
  <description>Quasistatic robotic planar pushing with single-point contact using only force feedback.</description>
  <maintainer email="adam.heins@robotics.utias.utoronto.ca">Adam Heins</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
